# geoflow

./: .env  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TODO.md  TODO_USER_AUTH.md  geoflow.db  init_trading_db.py  init_trading_db_fixed.py  myplan.md  pyproject.toml  requirements.txt  run_geoflow.py  run_geoflow_web.py  run_web.py  setup.bat  test_api.py  test_open_file.py  test_tree.py  workspace.json
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/auth/: __init__.py  config.py  database.py  models.py  oauth.py  routes.py  schemas.py  token.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: LoginButton.vue  LoginModal.vue  WelcomeModal.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: Home.vue  Login.vue  Register.vue
geoflow/: __init__.py  app.py  well_data.py
geoflow/ui/: __init__.py  app.py  highlighters.py  views.py  well_section.py  window.py  workspace.py
geoflow/ui/themes/: dark.qss  high_contrast.qss  light.qss
geoflow/utils/: proj.py
geoflow/web/backend/: main.py
geoflow/web/frontend/: index.html  package.json  vite.config.js
geoflow/web/frontend/src/: App.vue  main.js
geoflow/web/frontend/src/components/: ActivityBar.vue  CommandPalette.vue  Editor.vue  ExplorerPanel.vue  ExtensionsPanel.vue  (+6 more)
tests/: bench_pyvista_heavy.py  bench_threejs_points.html  test_proj.py  test_smoke.py  test_ui_recovery.py
tests/data/: seismic.sgy
tests/scripts/: generate_segy.py
